--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-native": "^0.61.5"
     },
     "dependencies": {
+        "deprecated-react-native-prop-types": "^2.2.0",
         "keymirror": "^0.1.1",
         "prop-types": "^15.7.2",
         "shaka-player": "^2.5.9"
